projects/nanousd-labs/nanousd/tests/usda/invalid/float_incomplete_exponent.usda
#usda 1.0

def Scope "Bad"
{
    float value = 1e
}
